--- a/Feb-15/p_techscroll.css
+++ b/Feb-15/p_techscroll.css
@@ -123,3 +123,60 @@
     background-color: var(--altcolor);
     color:var(--navfont);
   }
+  .technologies_scroll_bar
+      {
+        width: 40%;
+        max-width: 1536px;
+        background: var(--altcolor);
+        height: 50px;
+        
+        position: relative;
+        overflow: hidden;
+      }
+      
+      /* styles for the boxes */
+      .item
+      { 
+        width: 40px;
+        height: 40px;
+        border-radius: 15%;
+        
+        position: absolute;
+        left: 100%;
+        animation-name: scroll_left;
+        animation-duration: 15s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;  
+      }
+      
+      @keyframes scroll_left {
+            to {
+              left: -75px;
+            }
+      }
+      
+       .item1
+      {
+      }
+      
+      .item2
+      {
+        animation-delay: -3s;
+      }
+      .item3
+      {
+        animation-delay: -6s;
+      }
+      .item4
+      {
+        animation-delay: -9s;
+      }
+      .item5
+      {
+        animation-delay: -12s;
+      }
+      
+      i
+      {
+        font-size: 3rem;
+      }
